--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ecme-next",
+  "name": "digitalrakshak-app",
   "version": "1.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "gcp-build": "NODE_OPTIONS='--max-old-space-size=8192' npm run build",
+    "full-build": "NODE_OPTIONS='--max-old-space-size=8192' npm run build",
     "start": "next start",
     "lint": "next lint",
     "prettier": "npx prettier src --check",
